tests & doc & ref
Signed-off-by: Dennis Woithe <woithe@trinext.de>