@@ -1,11 +1,7 @@
-package de.trinext.framework.json.paths;
+package de.trinext.framework.json;
 
 import java.util.*;
 import java.util.regex.Pattern;
-
-import de.trinext.framework.json.*;
-
-// INNER TYPES ========================================================>>
 
 /**
  * @author Dennis Woithe
@@ -14,26 +10,26 @@ class JsonPathFinder {
 
     private static final Pattern PATH_SEPARATOR = Pattern.compile("(?<!\\\\)\\.");
     private final List<String> pathElems;
-    private JsonElement current;
+    private JsonElement<?> current;
 
     // ==== CONSTRUCTORS ===================================================== //
 
-    JsonPathFinder(JsonElementIterable start, CharSequence jsonPath) {
-        current = (JsonElement) start;
-        pathElems = new ArrayList<>(jsonPath.isEmpty() ? Collections.EMPTY_LIST : List.of(PATH_SEPARATOR.split(jsonPath)));
+    JsonPathFinder(JsonContainer<?> start, CharSequence jsonPath) {
+        current = start;
+        pathElems = new ArrayList<>(jsonPath.isEmpty() ? Collections.emptyList() : List.of(PATH_SEPARATOR.split(jsonPath)));
     }
 
 
     // ==== METHODS ========================================================== //
 
-    public Optional<JsonElement<?>> find() {
+    Optional<JsonElement<?>> find() {
         if (pathElems.isEmpty())
             return Optional.of(current);
         while (!pathElems.isEmpty()) {
             var pathElem = pathElems.remove(0);
             var next = (switch (current) {
-                case JsonObject jObj -> jObj.tryGet(pathElem);
-                case JsonArray jArr -> jArr.tryGet(Integer.valueOf(pathElem));
+                case JsonMap jObj -> jObj.tryGet(pathElem);
+                case JsonList jArr -> jArr.tryGet(Integer.parseInt(pathElem));
                 default -> Optional.ofNullable(pathElems.isEmpty() ? null : current);
             });
             if (next.isEmpty())
